--- a/crontab.conf
+++ b/crontab.conf
@@ -8,6 +8,6 @@ SHELL=/bin/sh
 PATH=/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin
 
 # m h dom mon dow command
-15  0	*	*	*	php /cron/script/backup.php  >> /cron/log/cron.log 2>&1 
+15  0	*	*	*	php /cron/script/backup.php  >> /cron/log/cron.log 2>&1
 30  */6	*	*	*	php /cron/script/get-flux.php instantane  >> /cron/log/cron.log 2>&1
-35  */6	*	*	*	php /cron/script/parse-xml.php  >> /cron/log/cron.log 2>&1
+*/5 *	*	*	*	php /cron/script/parse-xml.php  >> /cron/log/cron.log 2>&1
